# sracer

./: .gitignore  CMakeLists.txt  README.md
include/: geometry.h
src/: main.cpp
